app-deploy/backend/base/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
      - name: backend
        image: utsab12312/backend:latest
        ports:
          - containerPort: 8080
        securityContext:
          runAsUser: 1000
          allowPrivilegeEscalation: false
